...
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp">

                <TableLayout
                    android:id="@+id/Rows"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:divider="#000"
                    android:showDividers="beginning|middle|end"
                    app:layout_constraintLeft_toLeftOf="parent">

...
                            android:background="#000" />

                    </TableRow>


                    <TableRow
                        android:id="@+id/timerows"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="#000"
                        android:showDividers="beginning|middle|end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="239.5dp"
                            android:text="8 AM"
                            android:textAlignment="center"
                            android:textColor="#000" />


                    </TableRow>

...
                        android:divider="#000"
                        android:showDividers="beginning|middle|end">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="239.5dp"
                            android:text="9 AM"
                            android:textAlignment="center"
                            android:textColor="#000" />


                    </TableRow>

...
